--- a/Gems/app/build.gradle
+++ b/Gems/app/build.gradle
@@ -4,6 +4,11 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
+    repositories {
+        maven {
+            url 'https://docs.cloudboost.io/java.html'
+        }
+    }
     defaultConfig {
         applicationId "com.example.guha.gems"
         minSdkVersion 15
@@ -24,4 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
+    compile 'io.cloudboost:JavaSDK:1.0.3'
 }
