--- a/Gems/app/build.gradle
+++ b/Gems/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
     compile 'io.cloudboost:JavaSDK:1.0.3'
+    compile 'net.sourceforge.jexcelapi:jxl:2.6.+'
 }
